changing the logic of order status updation